--- a/GFL/index.html
+++ b/GFL/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script defer type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script type="module" src="./indexscript.js"></script>
         
