--- a/GFL/index.html
+++ b/GFL/index.html
@@ -6,9 +6,9 @@
             at switchToSheet (sheet?pli=1&gid=1593777261:62:11)
             at sheet?pli=1&gid=1593777261:98:112961
 
-            Will leave this helper script for now.
+            - Reloading Google Embed Iframe
         -->
-        <script defer type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
+        <!-- script defer type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script -->
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script type="module" src="./indexscript.js"></script>
         
