--- a/univasset/scripts/header.html
+++ b/univasset/scripts/header.html
@@ -1,4 +1,7 @@
 <!-- #region Inside -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
+
 <meta charset='utf-8' />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="theme-color" content="#151515" />
@@ -19,8 +22,6 @@
 <meta name="description" content="GFL FAQs first. Might add things later." />
 <meta property="og:description" content="GFL FAQs first. Might add things later." />    
 <title>Random Scraps | GFL FAQs first. Might add things later.</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" -->
 <link rel="stylesheet" href="/assets/css/style.css?v=d4bd63df67a739c7254be8c01189b85a2c8b839c">
 <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"WebPage","description":"GFL FAQs first. Might add things later.","headline":"Random Scraps","url":"https://xxx-yyy-xxx.github.io/GFL/technical.html"}
