--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -3,20 +3,18 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script type="module">
-            import {Zip} from '/univasset/scripts/externaljavascript.js';
+            import {Zip, Enumerate} from '/univasset/scripts/externaljavascript.js';
 
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.json())
                 .then(jsonObject => {
                     var elite = new Set(), nonelite = new Set(), rows = "";
                     
-                    for (const units of jsonObject) {
+                    for (const units of jsonObject)
                         (String(units.passive_skill).includes('200304') ? nonelite : elite).add(units.code)
-                    }
 
-                    for (const [index, unitE, unitNE] of Zip(true, elite, nonelite)) {
+                    for (const [index, [unitE, unitNE]] of Enumerate(Zip(true, elite, nonelite)))
                         rows += `<tr><td>${index + 1}</td><td>${unitE}</td><td>${unitNE ?? ''}</td></tr>`;
-                    }
 
                     return rows;})
                 .then(html => {document.getElementsByTagName('tbody')[0].innerHTML = html});
