--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -3,7 +3,7 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script type="module">
-            import {Zip, Enumerate} from '/univasset/scripts/externaljavascript.js';
+            import {zip, enumerate} from '/univasset/scripts/externaljavascript.js';
 
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.json())
@@ -13,7 +13,7 @@
                     for (const units of jsonObject)
                         (String(units.passive_skill).includes('200304') ? nonelite : elite).add(units.code)
 
-                    for (const [index, [unitE, unitNE]] of Enumerate(Zip(true, elite, nonelite)))
+                    for (const [index, [unitE, unitNE]] of enumerate(zip(true, elite, nonelite)))
                         rows += `<tr><td>${index + 1}</td><td>${unitE}</td><td>${unitNE ?? ''}</td></tr>`;
 
                     return rows;})
