--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
 
-        <meta charset='utf-8'>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <include src="./univasset/scripts/header.html"></include>
+
+        <!-- meta charset='utf-8'>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
         
