--- a/GFL/index.html
+++ b/GFL/index.html
@@ -60,8 +60,8 @@
                 <p><h1><a href="./mainpage">Topics Repository</a></h1></p>
 
                 <div id="input-type-container">
-                    <label class="flex-label checked"><input type="radio" name="input-type" onclick="toggleInput()" value="search" checked><h2>Keyword</h2></label>
-                    <label class="flex-label"><input type="radio" name="input-type" onclick="toggleInput()" value="tags"><h2>Tags</h2></label>
+                    <label class="flex-label checked"><input type="radio" name="input-type" onclick="toggleInput(this)" value="search" checked><h2>Keyword</h2></label>
+                    <label class="flex-label"><input type="radio" name="input-type" onclick="toggleInput(this)" value="tags"><h2>Tags</h2></label>
                 </div>
 
                 <form>
