--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -89,6 +89,10 @@
                         </tr>
                     </tbody>
                 </table>
+                <blockquote>
+                    I really wish they chose a different name for the game. Nobody ever asked if gfl 1 is ending when pnc was anounced
+                    - KookyInspection, July 8, 2022
+                </blockquote>
 
                 <!-- How is the gameplay loop like? -->
 
